# enigma2-ritzmo-plugins

./: Makefile.am  README  configure.ac  enigma2-ritzmo-plugins.bb
autotimer/: Makefile.am
autotimer/CONTROL/: control
autotimer/etc/: Makefile.am  autotimer-sample.xml  autotimer.xml
autotimer/src/: AutoList.py  AutoPoller.py  AutoScreens.py  AutoTimer.py  AutoTimerChannelEditor.py  AutoTimerComponent.py  AutoTimerConfiguration.py  AutoTimerEditor.py  AutoTimerExcludeEditor.py  AutoTimerList.py  AutoTimerOverview.py  AutoTimerPreview.py  Makefile.am  OldConfigurationParser.py  plugin.py
emission/CONTROL/: control
emission/src/: EmissionBandwidth.py  EmissionDetailview.py  EmissionOverview.py  EmissionSetup.py  Makefile.am  plugin.py
epgrefresh/CONTROL/: control
epgrefresh/src/: EPGRefresh.py  EPGRefreshChannelEditor.py  EPGRefreshConfiguration.py  EPGRefreshTimer.py  FakeTarget.py  plugin.py
historybrowser/CONTROL/: control
historybrowser/src/: Makefile.am  plugin.py
mediadownloader/CONTROL/: control
mediadownloader/src/: FTPProgressDownloader.py  HTTPProgressDownloader.py  LocationBox.py  Makefile.am  MediaDownloader.py  VariableProgressSource.py  plugin.py
mountmanager/: Makefile.am
mountmanager/CONTROL/: control
mountmanager/etc/: Makefile.am  mounts-sample.xml  mounts.xml
mountmanager/src/: Makefile.am  MountEdit.py  MountList.py  MountManager.py  Mounts.py  plugin.py
svdrp/CONTROL/: control
svdrp/src/: SVDRP.py
tictactoe/CONTROL/: control
tictactoe/src/: Makefile.am  plugin.py
weatherforecast/CONTROL/: control
(+5 files in other folders)
