AC_INIT(enigma2-ritzmo-plugins, 1.0)
AM_INIT_AUTOMAKE(enigma2-ritzmo-plugins, 1.0)

AM_PATH_PYTHON()

AC_OUTPUT([
Makefile

epgrefresh/Makefile
epgrefresh/src/Makefile

mountmanager/Makefile
mountmanager/etc/Makefile
mountmanager/src/Makefile

mediadownloader/Makefile
mediadownloader/src/Makefile

weatherforecast/Makefile
weatherforecast/src/Makefile

werbezapper/Makefile
werbezapper/src/Makefile
])
