AC_INIT(enigma2-ritzmo-plugins, 1.0)
AM_INIT_AUTOMAKE(enigma2-ritzmo-plugins, 1.0)

AM_PATH_PYTHON()

AC_OUTPUT([
Makefile

historybrowser/Makefile
historybrowser/src/Makefile

mountmanager/Makefile
mountmanager/etc/Makefile
mountmanager/src/Makefile

tictactoe/Makefile
tictactoe/src/Makefile

weatherforecast/Makefile
weatherforecast/src/Makefile

])
