AC_INIT(enigma2-ritzmo-plugins, 1.0)
AM_INIT_AUTOMAKE(enigma2-ritzmo-plugins, 1.0)

AM_PATH_PYTHON()

AC_OUTPUT([
Makefile

emission/Makefile
emission/src/Makefile

historybrowser/Makefile
historybrowser/src/Makefile

svdrp/Makefile
svdrp/src/Makefile

tictactoe/Makefile
tictactoe/src/Makefile

weatherforecast/Makefile
weatherforecast/src/Makefile

])
